--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -831,6 +831,9 @@ a {
 .cid-spJ2tAD84A img,
 .cid-spJ2tAD84A .item-img {
   width: 100%;
+  height: 100%;
+  height: 300px;
+  object-fit: cover;
 }
 .cid-spJ2tAD84A .item:focus,
 .cid-spJ2tAD84A span:focus {
@@ -6689,422 +6692,6 @@ a {
 .cid-sq040FkxP0 .mbr-section-title {
   text-align: center;
   color: #111111;
-}
-.cid-sq5BCnxDJ7 {
-  padding-top: 2rem;
-  padding-bottom: 0rem;
-  background-color: #232323;
-}
-.cid-sq5BCnxDJ7 .social-row {
-  display: flex;
-  flex-wrap: wrap;
-}
-.cid-sq5BCnxDJ7 .soc-item {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 50%;
-  background-color: white;
-  margin-right: 0.5rem;
-  margin-bottom: 1rem;
-  padding: 0.5rem;
-  height: 2.5rem;
-  width: 2.5rem;
-}
-@media (max-width: 767px) {
-  .cid-sq5BCnxDJ7 .row {
-    text-align: center;
-  }
-  .cid-sq5BCnxDJ7 .social-row {
-    justify-content: center;
-  }
-}
-.cid-sq5BCnxDJ7 .list {
-  list-style: none;
-  padding-left: 0;
-  color: #bbbbbb;
-}
-@media (max-width: 991px) {
-  .cid-sq5BCnxDJ7 .list {
-    margin-bottom: 2rem;
-  }
-}
-@media (min-width: 992px) {
-  .cid-sq5BCnxDJ7 .list {
-    margin-bottom: 0rem;
-  }
-}
-.cid-sq5BCnxDJ7 .mbr-text {
-  color: #bbbbbb;
-}
-.cid-sq5BCnxDJ7 .mbr-iconfont {
-  color: black;
-}
-.cid-sq0wkP6Kb3 {
-  z-index: 1000;
-  width: 100%;
-  position: relative;
-  min-height: 60px;
-}
-.cid-sq0wkP6Kb3 nav.navbar {
-  position: fixed;
-}
-.cid-sq0wkP6Kb3 .dropdown-item:before {
-  font-family: Moririse2 !important;
-  content: '\e966';
-  display: inline-block;
-  width: 0;
-  position: absolute;
-  left: 1rem;
-  top: 0.5rem;
-  margin-right: 0.5rem;
-  line-height: 1;
-  font-size: inherit;
-  vertical-align: middle;
-  text-align: center;
-  overflow: hidden;
-  transform: scale(0, 1);
-  transition: all 0.25s ease-in-out;
-}
-.cid-sq0wkP6Kb3 .dropdown-menu {
-  padding: 0;
-}
-.cid-sq0wkP6Kb3 .dropdown-item {
-  border-bottom: 1px solid #e6e6e6;
-}
-.cid-sq0wkP6Kb3 .dropdown-item:hover,
-.cid-sq0wkP6Kb3 .dropdown-item:focus {
-  background: #ffffff !important;
-  color: white !important;
-}
-.cid-sq0wkP6Kb3 .nav-dropdown .link {
-  padding: 0 0.3em !important;
-  margin: .667em 1em !important;
-}
-.cid-sq0wkP6Kb3 .nav-dropdown .link.dropdown-toggle::after {
-  margin-left: 0.5rem;
-  margin-top: 0.2rem;
-}
-.cid-sq0wkP6Kb3 .nav-link {
-  position: relative;
-}
-.cid-sq0wkP6Kb3 .container {
-  display: flex;
-  margin: auto;
-}
-.cid-sq0wkP6Kb3 .iconfont-wrapper {
-  color: #000000 !important;
-  font-size: 1.5rem;
-  padding-right: .5rem;
-}
-.cid-sq0wkP6Kb3 .navbar-caption {
-  padding-right: 4rem;
-}
-.cid-sq0wkP6Kb3 .dropdown-menu,
-.cid-sq0wkP6Kb3 .navbar.opened {
-  background: #232323 !important;
-}
-.cid-sq0wkP6Kb3 .nav-item:focus,
-.cid-sq0wkP6Kb3 .nav-link:focus {
-  outline: none;
-}
-.cid-sq0wkP6Kb3 .dropdown .dropdown-menu .dropdown-item {
-  width: auto;
-  transition: all 0.25s ease-in-out;
-}
-.cid-sq0wkP6Kb3 .dropdown .dropdown-menu .dropdown-item::after {
-  right: 0.5rem;
-}
-.cid-sq0wkP6Kb3 .dropdown .dropdown-menu .dropdown-item .mbr-iconfont {
-  margin-left: -1.8rem;
-  padding-right: 1rem;
-  font-size: inherit;
-}
-.cid-sq0wkP6Kb3 .dropdown .dropdown-menu .dropdown-item .mbr-iconfont:before {
-  display: inline-block;
-  transform: scale(1, 1);
-  transition: all 0.25s ease-in-out;
-}
-.cid-sq0wkP6Kb3 .collapsed .dropdown-menu .dropdown-item:before {
-  display: none;
-}
-.cid-sq0wkP6Kb3 .collapsed .dropdown .dropdown-menu .dropdown-item {
-  padding: 0.235em 1.5em 0.235em 1.5em !important;
-  transition: none;
-  margin: 0 !important;
-}
-.cid-sq0wkP6Kb3 .navbar {
-  min-height: 77px;
-  transition: all .3s;
-  border-bottom: 1px solid transparent;
-  background: #232323;
-}
-.cid-sq0wkP6Kb3 .navbar:not(.navbar-short) {
-  border-bottom: 1px solid #e6e6e6;
-}
-.cid-sq0wkP6Kb3 .navbar.opened {
-  transition: all .3s;
-}
-.cid-sq0wkP6Kb3 .navbar .dropdown-item {
-  padding: .5rem 1.8rem;
-}
-.cid-sq0wkP6Kb3 .navbar .navbar-logo img {
-  width: auto;
-}
-.cid-sq0wkP6Kb3 .navbar .navbar-collapse {
-  justify-content: flex-end;
-  z-index: 1;
-}
-.cid-sq0wkP6Kb3 .navbar.collapsed .nav-item .nav-link::before {
-  display: none;
-}
-.cid-sq0wkP6Kb3 .navbar.collapsed.opened .dropdown-menu {
-  top: 0;
-}
-@media (min-width: 992px) {
-  .cid-sq0wkP6Kb3 .navbar.collapsed.opened:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 3.8rem);
-  }
-}
-.cid-sq0wkP6Kb3 .navbar.collapsed .dropdown-menu .dropdown-submenu {
-  left: 0 !important;
-}
-.cid-sq0wkP6Kb3 .navbar.collapsed .dropdown-menu .dropdown-item:after {
-  right: auto;
-}
-.cid-sq0wkP6Kb3 .navbar.collapsed .dropdown-menu .dropdown-toggle[data-toggle="dropdown-submenu"]:after {
-  margin-left: 0.5rem;
-  margin-top: 0.2rem;
-  border-top: 0.35em solid;
-  border-right: 0.35em solid transparent;
-  border-left: 0.35em solid transparent;
-  border-bottom: 0;
-  top: 55%;
-}
-.cid-sq0wkP6Kb3 .navbar.collapsed ul.navbar-nav li {
-  margin: auto;
-}
-.cid-sq0wkP6Kb3 .navbar.collapsed .dropdown-menu .dropdown-item {
-  padding: .25rem 1.5rem;
-  text-align: center;
-}
-.cid-sq0wkP6Kb3 .navbar.collapsed .icons-menu {
-  padding-left: 0;
-  padding-right: 0;
-  padding-top: .5rem;
-  padding-bottom: .5rem;
-}
-@media (max-width: 991px) {
-  .cid-sq0wkP6Kb3 .navbar .nav-item .nav-link::before {
-    display: none;
-  }
-  .cid-sq0wkP6Kb3 .navbar.opened .dropdown-menu {
-    top: 0;
-  }
-  .cid-sq0wkP6Kb3 .navbar .dropdown-menu .dropdown-submenu {
-    left: 0 !important;
-  }
-  .cid-sq0wkP6Kb3 .navbar .dropdown-menu .dropdown-item:after {
-    right: auto;
-  }
-  .cid-sq0wkP6Kb3 .navbar .dropdown-menu .dropdown-toggle[data-toggle="dropdown-submenu"]:after {
-    margin-left: 0.5rem;
-    margin-top: 0.2rem;
-    border-top: 0.35em solid;
-    border-right: 0.35em solid transparent;
-    border-left: 0.35em solid transparent;
-    border-bottom: 0;
-    top: 55%;
-  }
-  .cid-sq0wkP6Kb3 .navbar .navbar-logo img {
-    height: 3.8rem !important;
-  }
-  .cid-sq0wkP6Kb3 .navbar ul.navbar-nav li {
-    margin: auto;
-  }
-  .cid-sq0wkP6Kb3 .navbar .dropdown-menu .dropdown-item {
-    padding: .25rem 1.5rem !important;
-    text-align: center;
-  }
-  .cid-sq0wkP6Kb3 .navbar .navbar-brand {
-    flex-shrink: initial;
-    flex-basis: auto;
-    word-break: break-word;
-    padding-right: 2rem;
-  }
-  .cid-sq0wkP6Kb3 .navbar .navbar-toggler {
-    flex-basis: auto;
-  }
-  .cid-sq0wkP6Kb3 .navbar .icons-menu {
-    padding-left: 0;
-    padding-top: .5rem;
-    padding-bottom: .5rem;
-  }
-}
-.cid-sq0wkP6Kb3 .navbar.navbar-short {
-  min-height: 60px;
-}
-.cid-sq0wkP6Kb3 .navbar.navbar-short .navbar-logo img {
-  height: 3rem !important;
-}
-.cid-sq0wkP6Kb3 .navbar.navbar-short .navbar-brand {
-  padding: 0;
-}
-.cid-sq0wkP6Kb3 .navbar-brand {
-  flex-shrink: 0;
-  align-items: center;
-  margin-right: 0;
-  padding: 0;
-  transition: all .3s;
-  word-break: break-word;
-  z-index: 1;
-}
-.cid-sq0wkP6Kb3 .navbar-brand .navbar-caption {
-  line-height: inherit !important;
-}
-.cid-sq0wkP6Kb3 .navbar-brand .navbar-logo a {
-  outline: none;
-}
-.cid-sq0wkP6Kb3 .dropdown-item.active,
-.cid-sq0wkP6Kb3 .dropdown-item:active {
-  background-color: transparent;
-}
-.cid-sq0wkP6Kb3 .navbar-expand-lg .navbar-nav .nav-link {
-  padding: 0;
-}
-.cid-sq0wkP6Kb3 .nav-dropdown .link.dropdown-toggle {
-  margin-right: 1.667em;
-}
-.cid-sq0wkP6Kb3 .nav-dropdown .link.dropdown-toggle[aria-expanded="true"] {
-  margin-right: 0;
-  padding: 0.667em 1.667em;
-}
-.cid-sq0wkP6Kb3 .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #232323;
-}
-.cid-sq0wkP6Kb3 .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
-  margin: 0;
-  left: 100%;
-}
-.cid-sq0wkP6Kb3 .navbar .dropdown.open > .dropdown-menu {
-  display: block;
-}
-.cid-sq0wkP6Kb3 ul.navbar-nav {
-  flex-wrap: wrap;
-}
-.cid-sq0wkP6Kb3 .navbar-buttons {
-  text-align: center;
-  min-width: 170px;
-}
-.cid-sq0wkP6Kb3 button.navbar-toggler {
-  outline: none;
-  width: 31px;
-  height: 20px;
-  cursor: pointer;
-  transition: all .2s;
-  position: relative;
-  align-self: center;
-}
-.cid-sq0wkP6Kb3 button.navbar-toggler .hamburger span {
-  position: absolute;
-  right: 0;
-  width: 30px;
-  height: 2px;
-  border-right: 5px;
-  background-color: currentColor;
-}
-.cid-sq0wkP6Kb3 button.navbar-toggler .hamburger span:nth-child(1) {
-  top: 0;
-  transition: all .2s;
-}
-.cid-sq0wkP6Kb3 button.navbar-toggler .hamburger span:nth-child(2) {
-  top: 8px;
-  transition: all .15s;
-}
-.cid-sq0wkP6Kb3 button.navbar-toggler .hamburger span:nth-child(3) {
-  top: 8px;
-  transition: all .15s;
-}
-.cid-sq0wkP6Kb3 button.navbar-toggler .hamburger span:nth-child(4) {
-  top: 16px;
-  transition: all .2s;
-}
-.cid-sq0wkP6Kb3 nav.opened .hamburger span:nth-child(1) {
-  top: 8px;
-  width: 0;
-  opacity: 0;
-  right: 50%;
-  transition: all .2s;
-}
-.cid-sq0wkP6Kb3 nav.opened .hamburger span:nth-child(2) {
-  transform: rotate(45deg);
-  transition: all .25s;
-}
-.cid-sq0wkP6Kb3 nav.opened .hamburger span:nth-child(3) {
-  transform: rotate(-45deg);
-  transition: all .25s;
-}
-.cid-sq0wkP6Kb3 nav.opened .hamburger span:nth-child(4) {
-  top: 8px;
-  width: 0;
-  opacity: 0;
-  right: 50%;
-  transition: all .2s;
-}
-.cid-sq0wkP6Kb3 .navbar-dropdown {
-  padding: .5rem 1rem;
-  position: fixed;
-}
-.cid-sq0wkP6Kb3 a.nav-link {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.cid-sq0wkP6Kb3 .icons-menu {
-  flex-wrap: nowrap;
-  display: flex;
-  justify-content: center;
-  padding-left: 1rem;
-  padding-right: 1rem;
-  padding-top: 0.3rem;
-  text-align: center;
-}
-@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
-  .cid-sq0wkP6Kb3 .navbar {
-    height: 77px;
-  }
-  .cid-sq0wkP6Kb3 .navbar.opened {
-    height: auto;
-  }
-  .cid-sq0wkP6Kb3 .nav-item .nav-link:hover::before {
-    width: 175%;
-    max-width: calc(100% + 2rem);
-    left: -1rem;
-  }
-}
-.cid-sq0wkQOKN5 {
-  padding-top: 6rem;
-  padding-bottom: 6rem;
-  background-image: url("../../../assets/images/background1.jpg");
-}
-@media (max-width: 991px) {
-  .cid-sq0wkQOKN5 .image-wrapper {
-    margin-bottom: 1rem;
-  }
-}
-.cid-sq0wkQOKN5 img {
-  width: 100%;
-}
-@media (min-width: 992px) {
-  .cid-sq0wkQOKN5 .text-wrapper {
-    padding: 2rem;
-  }
-}
-.cid-sq0wkQOKN5 .mbr-text {
-  text-align: left;
-}
-.cid-sq0wkQOKN5 .mbr-section-title {
-  text-align: left;
 }
 .cid-sq5BCnxDJ7 {
   padding-top: 2rem;
